# mevscan-py

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python.yml
mevscan/: api_calls.py  constants.py
mevscan/amm/: querys.py  swap.py  swaps.py
mevscan/amm/mappers/: swaps.py
mevscan/lending/: borrow.py  borrows.py  deposit.py  deposits.py  liquidation.py  liquidations.py  querys.py  repay.py  repays.py
mevscan/lending/mappers/: borrows.py  deposits.py  liquidations.py  repays.py
