[tool.poetry]
name = "mevscan"
version = "0.1.0"
description = "mev scan tool"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas-datareader = "^0.9.0"
pandas = ">= 0.20"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
